# SakuraAutoCoder

./: .gitignore  CMakeLists.txt  CMakeSettings.json  SReflCodeGen.cpp  TestComponent.xml
CodeGen/: component.generated.cxx  component.generated.hxx  component.refl.hxx  refl.rule.hxx
CodeGen/Common/: TimeStampHeader.hpp
CodeGen/Refl/: ParserUtils.cpp  ParserUtils.hpp  codegen.class.cpp  codegen.class.hpp  codegen.classmember.cpp  codegen.classmember.hpp  codegen.classmemeber.hpp  codegen.enum.cpp  codegen.enum.hpp  codegen.hpp  codegen.utils.hpp  parser.cpp  parser.hpp  refl.codegenerater.hpp  types.cpp  types.hpp
CodeGen/UnitTest/: Test.cpp  component.gen.hxx  component.gen.template.hxx  component.generated.hxx  component.refl.hxx
Parse/: sakura_cpp.parser.hpp
cppast/: CMakeLists.txt
cppast/include/cppast/: code_generator.hpp  compile_config.hpp
cppast/src/: CMakeLists.txt  code_generator.cpp
cppast/src/libclang/: libclang_parser.cpp  preprocessor.cpp  template_parser.cpp  type_parser.cpp  variable_parser.cpp
cppast/tool/: CMakeLists.txt  main.cpp
include/: constexpr_map.hpp  filesystem.utils.hpp  refl.rule.hxx
